test/libsolidity/syntaxTests/abstract/unimplemented_functions.sol
contract A {
    function a() public virtual;
}
// ----
// TypeError 3656: (0-47): Contract "A" should be marked as abstract.
